# agentic-incident-intelligence

./: .env.example  .gitignore  CLAUDE.md  README.md  brain-prompt.md  docker-compose.yml  run.sh  spec.md
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/agent/: graph.py  orchestrator.py  state.py  tools.py
backend/src/agent/sub_agents/: change_detector.py  log_correlator.py  metric_analyzer.py  postmortem_writer.py  runbook_executor.py  similar_incident_finder.py
backend/src/api/: models.py  routes.py
backend/src/context/: loader.py  manager.py
backend/src/db/: database.py  migrations.py  models.py
backend/src/llm/: provider.py
backend/src/mcp/: client.py  manager.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ContextSwitcher.tsx  SessionSidebar.tsx
frontend/src/pages/: ChatPage.tsx  ContextManagePage.tsx  ContextSetupPage.tsx  MCPServersPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
